--- a/package.json
+++ b/package.json
@@ -9,18 +9,47 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@hookform/resolvers": "^3.9.0",
+    "@mui/icons-material": "^5.16.0",
+    "@mui/lab": "^5.0.0-alpha.171",
+    "@mui/material": "^5.16.0",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/x-charts": "^7.9.0",
+    "@mui/x-date-pickers": "^7.9.0",
+    "@tanstack/react-query": "^5.50.1",
+    "@types/file-saver-es": "^2.0.3",
+    "@types/js-cookie": "^3.0.6",
+    "@types/lodash": "^4.17.6",
+    "autoprefixer": "^10.4.19",
+    "axios": "^1.7.2",
+    "devextreme": "24.1",
+    "devextreme-react": "24.1",
+    "exceljs": "^4.4.0",
+    "file-saver-es": "^2.0.5",
+    "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
+    "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "react-hook-form": "^7.52.1",
+    "react-simple-snackbar": "^1.1.11",
+    "sass": "^1.77.6",
+    "styled-components": "^6.1.11",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tanstack/eslint-plugin-query": "^5.50.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "eslint-config-next": "14.2.4",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
